--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>70% of my body is movies</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Pittsburgh PA but I grew up in Hillsborough NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to write, read and practice photography</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Writer/Director of indipendant films</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to learn a new and valuable skill.</p>
     </section>
 
     <footer id="footer">
